syntax = "proto3";

package w3.exchange.pb;


// ProductClassEnum是一个产品类型类型
enum ProductClassEnum {
  UnknownProductClass = 0; // 未知
  SPOT = 1;     // 币币
  MARGIN = 2;   // 币币杠杆
  SWAP = 3;     // 永续合约
  FUTURES = 4;  // 交割合约
  OPTION = 5;   // 期权
}

// CurrencyEnum是一个货币类型
enum CurrencyEnum {
  UnknownCurrency = 0;  // 未知
  USDT = 1;  // 美元稳定币
  BUSD = 2;  // 币安稳定币
  USDC = 3;  // 去中心化稳定币

}

// ExchangeEnum是一个交易所类型
enum ExchangeEnum {
  UnknownExchange = 0;  // 未知
  BINANCE = 1;  // 币安交易所
  OKX = 2;  // 欧易交易所
  GATE = 3;  // 芝麻开门交易所
}

// Bar周期
enum BarCycleEnum {
  B_5Sec = 0;
  B_1Min = 1;
  B_3Min = 2;
  B_5Min = 3;
  B_15Min = 4;
  B_30Min = 5;
  B_1H = 6;
  B_2H = 7;
  B_4H = 8;
  B_6H = 9;
  B_8H = 10;
  B_12H = 11;
  B_1Day = 12;
  B_3Day = 13;
  B_1W = 14;
  B_1M = 15;
}

// OptionsTypeEnum是一个期权类型类型
enum OptionsTypeEnum {
  O_Unknown = 0;  // 未知
  O_CallOptions = 1; // 看涨
  O_PutOptions = 2; // 看跌
}

// CombinationTypeEnum是一个组合类型类型
enum CombinationTypeEnum {
  COMBT_Unknown = 0;  // 未知
  COMBT_Future = 1; // 期货组合
  COMBT_BUL = 2; // 垂直价差BUL
  COMBT_BER = 3; // 垂直价差BER
  COMBT_STD = 4; // 跨式组合
  COMBT_STG = 5; // 宽跨式组合
  COMBT_PRT = 6; // 备兑组合
  COMBT_CLD = 7; // 时间价差组合
}



enum DirectionEnum{
  D_Unknown = 0;  // 未知
  D_Buy = 1; // 买
  D_Sell =2; // 卖

}

// PositionTypeEnum是一个持仓类型类型
enum PositionTypeEnum {
  PT_Unknown = 0;  // 未知
  PT_Net = 1; // 净持仓
  PT_Gross = 2; // 综合持仓
}

// PositionDirectionEnum是一个持仓多空方向类型
enum PositionDirectionEnum {
  PD_Unknown = 0;  // 未知
  PD_Net = 1; // 净
  PD_Long = 2;  // 多
  PD_Short = 3;  // 空
}


// HedgeFlagEnum是一个投机套保标志类型
enum HedgeFlagEnum {
  HF_Unknown = 0; // 未知
  HF_Speculation = 1; // 投机
  HF_Arbitrage = 2; // 套利
  HF_Hedge = 3; // 套保
  HF_MarketMaker = 4; // 做市商
  HF_SpecHedge = 5; // 第一腿投机第二腿套保 大商所专用
  HF_HedgeSpec = 6; // 第一腿套保第二腿投机  大商所专用
}

// OrderStatusEnum是一个报单状态类型
enum OrderStatusEnum {
  OS_Unknown = 0; // 未知
  OS_AllTraded = 1; // 全部成交
  OS_PartTradedQueueing = 2; // 部分成交还在队列中
  OS_PartTradedNotQueueing = 3; // 部分成交不在队列中
  OS_NoTradeQueueing = 4; // 未成交还在队列中
  OS_NoTradeNotQueueing = 5; // 未成交不在队列中
  OS_Canceled = 6; // 撤单
  OS_NotTouched = 7; // 尚未触发
  OS_Touched = 8; // 已触发
  OS_Rejected = 9; // 已拒绝
}

// OrderPriceTypeEnum是一个报单价格条件类型
enum OrderPriceTypeEnum {
  OPT_Unknown = 0; // 未知
  OPT_AnyPrice = 1; // 任意价
  OPT_LimitPrice = 2; // 限价
  OPT_BestPrice = 3; // 最优价
  OPT_LastPrice = 4; // 最新价
  OPT_LastPricePlusOneTicks = 5; // 最新价浮动上浮1个ticks
  OPT_LastPricePlusTwoTicks = 6; // 最新价浮动上浮2个ticks
  OPT_LastPricePlusThreeTicks = 7; // 最新价浮动上浮3个ticks
  OPT_AskPrice1 = 8; // 卖一价
  OPT_AskPrice1PlusOneTicks = 9; // 卖一价浮动上浮1个ticks
  OPT_AskPrice1PlusTwoTicks = 10; // 卖一价浮动上浮2个ticks
  OPT_AskPrice1PlusThreeTicks = 11; //  卖一价浮动上浮3个ticks
  OPT_BidPrice1 = 12; // 买一价
  OPT_BidPrice1PlusOneTicks = 13; // 买一价浮动上浮1个ticks
  OPT_BidPrice1PlusTwoTicks = 14; // 买一价浮动上浮2个ticks
  OPT_BidPrice1PlusThreeTicks = 15; // 买一价浮动上浮3个ticks
  OPT_FiveLevelPrice = 16; // 五档价
}

// OffsetFlagEnum是一个开平标志类型
enum OffsetFlagEnum {
  OF_Unknown = 0; // 未知
  OF_Open = 1; // 开仓
  OF_Close = 2; // 平仓
  OF_ForceClose = 3; // 强平
  OF_CloseToday = 4; // 平今
  OF_CloseYesterday = 5; // 平昨
  OF_ForceOff = 6; // 强减
  OF_LocalForceClose = 7; // 本地强平
}

// ForceCloseReasonEnum是一个强平原因类型
enum ForceCloseReasonEnum {
  FCR_Unknown = 0; // 未知
  FCR_NotForceClose = 1; // 非强平
  FCR_LackDeposit = 2; // 资金不足
  FCR_ClientOverPositionLimit = 3; // 客户超仓
  FCR_MemberOverPositionLimit = 4; // 会员超仓
  FCR_NotMultiple = 5; // 持仓非整数倍
  FCR_Violation = 6; // 违规
  FCR_Other = 7; // 其它
  FCR_PersonDeliver = 8; // 自然人临近交割
}

// OrderTypeEnum是一个报单类型类型
enum OrderTypeEnum {
  OT_Unknown = 0; // 未知
  OT_Normal = 1; // 正常
  OT_DeriveFromQuote = 2; // 报价衍生
  OT_DeriveFromCombination = 3; // 组合衍生
  OT_Combination = 4; // 组合报单
  OT_ConditionalOrder = 5; // 条件单
  OT_Swap = 6; // 互换单
}

// TimeConditionEnum是一个有效期类型类型
enum TimeConditionEnum {
  TC_Unknown = 0; // 未知
  TC_IOC = 1; // 立即完成，否则撤销
  TC_GFS = 2; // 本节有效
  TC_GFD = 3; // 当日有效
  TC_GTD = 4; // 指定日期前有效
  TC_GTC = 5; // 撤销前有效
  TC_GFA = 6; // 集合竞价有效
}


// VolumeConditionEnum是一个成交量类型类型
enum VolumeConditionEnum {
  VC_Unknown = 0; // 未知
  VC_AV = 1; // 任何数量
  VC_MV = 2; // 最小数量
  VC_CV = 3; // 全部数量
}

// ContingentConditionEnum是一个触发条件类型
enum ContingentConditionEnum {
  CC_Unknown = 0; // 未知
  CC_Immediately = 1; // 立即
  CC_Touch = 2; // 止损
  CC_TouchProfit = 3; // 止赢
  CC_ParkedOrder = 4; // 预埋单
  CC_LastPriceGreaterThanStopPrice = 5; // 最新价大于条件价
  CC_LastPriceGreaterEqualStopPrice = 6; // 最新价大于等于条件价
  CC_LastPriceLesserThanStopPrice = 7; // 最新价小于条件价
  CC_LastPriceLesserEqualStopPrice = 8; // 最新价小于等于条件价
  CC_AskPriceGreaterThanStopPrice = 9; // 卖一价大于条件价
  CC_AskPriceGreaterEqualStopPrice = 10; // 卖一价大于等于条件价
  CC_AskPriceLesserThanStopPrice = 11; // 卖一价小于条件价
  CC_AskPriceLesserEqualStopPrice = 12; // 卖一价小于等于条件价
  CC_BidPriceGreaterThanStopPrice = 13; // 买一价大于条件价
  CC_BidPriceGreaterEqualStopPrice = 14; // 买一价大于等于条件价
  CC_BidPriceLesserThanStopPrice = 15; // 买一价小于条件价
  CC_BidPriceLesserEqualStopPrice = 16; // 买一价小于等于条件价
  CC_LocalLastPriceLesserEqualStopPrice = 17; // (本地)最新价小于等于条件价
  CC_LocalLastPriceGreaterEqualStopPrice = 18; // (本地)最新价大于等于条件价
}


// TradeTypeEnum是一个成交类型类型
enum TradeTypeEnum {
  TT_Unknown = 0; // 未知
  TT_SplitCombination = 1; // 组合持仓拆分为单一持仓,初始化不应包含该类型的持仓
  TT_Common = 2; // 普通成交
  TT_OptionsExecution = 3; // 期权执行
  TT_OTC = 4; // OTC成交
  TT_EFPDerived = 5; // 期转现衍生成交
  TT_CombinationDerived = 6; // 组合衍生成交
  TT_BlockTrade = 7; // 大宗交易成交
}

// PriceSourceEnum是一个成交价来源类型
enum PriceSourceEnum {
  PSRC_Unknown = 0; // 未知
  PSRC_LastPrice = 1; // 前成交价
  PSRC_Buy = 2; // 买委托价
  PSRC_Sell = 3; // 卖委托价
  PSRC_OTC = 4; // 场外成交价
}

